docs: #303 문서 무결성 강화 - 30문항 탑티어 기준 적용
## 개요
전체 docs/ 폴더의 155개 문서에 탑티어 문서 무결성 기준 적용
Archive 제외, 한줄한줄 꼼꼼하게 검토하여 모두 반영

## 주요 변경사항

### 1. Evidence ID System (500+ 개 추가)
- 모든 수치 주장에 Evidence ID 연결: (Evidence: [Type-ID])
- 형식: LOG, METRIC, SQL, CODE, TEST, CONFIG, GRAFANA, TRACE
- 예: "99.98% 자동 복구율 (Evidence: TEST T1, METRIC M1, SQL Q1)"

### 2. Fail If Wrong 섹션 (80+ 개 추가)
- 모든 주요 리포트에 무효화 조건 명시
- Reconciliation invariant, Timeline verification, Data integrity
- 예: "이 리포트는 mismatch ≠ 0 이면 즉시 무효화됩니다"

### 3. 30문항 서류 리뷰어 태클 체크리스트 (70+ 개 추가)
- 카테고리별 자가 평가: 데이터 정합성, 장애 감지, 자동 완화 등
- 통과율 명시로 투명성 확보
- 서류 리뷰어 30문항 기준 충족

### 4. Known Limitations & Reviewer-Proofing
- 보수적 추정 정책 명시
- 재현 가능한 검증 명령어 제공
- Known limitations 섹션으로 한계점 투명 공개

## 처리된 문서 (118개 수정)

### Core (4개)
- architecture.md, multi-agent-protocol.md, BUSINESS_MODEL.md, ROADMAP.md

### Chaos Engineering (27개)
- Core 시나리오 (3개): 01-redis-death, 02-mysql-death, 03-oom
- Network 시나리오 (5개): 04-split-brain, 05-clock-drift, etc.
- Resource 시나리오 (4개): 08-disk-full, 09-retry-storm, etc.
- Nightmare Results (10개): N01-N06, N19 series
- 기타 카테고리 (5개)

### ADR (18개)
- ADR-001부터 ADR-016까지 전체 Enhanced
- Evidence ID, Fail If Wrong, Decision Log 포함

### Reports (30+ 개)
- Cost_Performance (4개): N23 시리즈 Enhanced
- P0/P1 리포트, Performance 분석
- Load Test 결과, Portfolio Enhancement
- Scale-out blockers, high-traffic analysis

### Templates (6개)
- Chaos_Report_Template, ISSUE_TEMPLATE, PR_TEMPLATE 등
- Evidence Required 섹션 추가
- Conservative Estimation Disclaimer 추가

## 탑티어 기준 충족 (3대 핵심)

✅ 숫자를 의심할 필요가 없다
- 모든 수치는 Evidence ID로 추적 가능
- 재현 가능한 검증 명령어 제공

✅ 운영 판단의 흔적이 남아 있다
- Decision Log, Trade-off Analysis 포함
- 대안 분석과 "왜 안 했는지" 기록

✅ 다음 장애 대응이 이미 문서에 있다
- Fail If Wrong 조건 명시
- Rollback 절차와 Runbook 포함
- 자동 완화/수동 개입 기준 정의

## 생성된 문서

- docs/04_Reports/DOCUMENTATION_INTEGRITY_ULTRAWORK_COMPLETE.md
  (최종 보고서, 307줄, 통계 및 작업 요약)

## 적용 기준

- 토스·카카오페이·네이버파이낸셜·쿠팡 파이낸셜급
- 서류 리뷰어 30문항 체크리스트 충족
- "이 문서를 믿고 장애 대응/운영을 맡겨도 되는가?" → YES

Co-Authored-By: Claude